--- a/templates/userinput.html
+++ b/templates/userinput.html
@@ -5,10 +5,8 @@
 
         <form method="POST" action = '/nlpoutput' >
             <label for="paragraph">Enter the text:</label><br>
-            <input type="text" id="paragraph" name="paragraph" placeholder="paragraph" required='required'><br>           
-            <button type='submit'>Predict</button><br>
-            {{predict}}
+            <textarea rows="5" cols="50" id="paragraph" name="paragraph" placeholder="paragraph" required='required'> </textarea><br>           
+            <button type='submit'>Submit</button><br>
         </form>
     </body>
 </html>
-
